flycheck-stan/examples/example_error_and_info_not_conditional.stanc3out.txt

Warning: deprecated language construct used in 'examples/example_error_and_info_not_conditional.stan', line 1, column 0:
   -------------------------------------------------
     1:  # The Eight Schools example with non-centered parametrization.
         ^
     2:  # https://mc-stan.org/bayesplot/articles/visual-mcmc-diagnostics.html
     3:  data {
   -------------------------------------------------

Comments beginning with # are deprecated. Please use // in place of # for line comments.


Warning: deprecated language construct used in 'examples/example_error_and_info_not_conditional.stan', line 2, column 0:
   -------------------------------------------------
     1:  # The Eight Schools example with non-centered parametrization.
     2:  # https://mc-stan.org/bayesplot/articles/visual-mcmc-diagnostics.html
         ^
     3:  data {
     4:    int<lower=0> J;
   -------------------------------------------------

Comments beginning with # are deprecated. Please use // in place of # for line comments.


Warning: deprecated language construct used in 'examples/example_error_and_info_not_conditional.stan', line 20, column 22:
   -------------------------------------------------
    18:    mu ~ normal(0, 10);
    19:    target += cauchy_lpdf(tau, 0, 10);
    20:    eta ~ normal(0, 1); # implies theta ~ normal(mu, tau)
                               ^
    21:    y ~ normal(theta, sigma);
    22:  }
   -------------------------------------------------

Comments beginning with # are deprecated. Please use // in place of # for line comments.


Semantic error in 'examples/example_error_and_info_not_conditional.stan', line 19, column 12 to column 35:
   -------------------------------------------------
    17:  model {
    18:    mu ~ normal(0, 10);
    19:    target += cauchy_lpdf(tau, 0, 10);
                     ^
    20:    eta ~ normal(0, 1); # implies theta ~ normal(mu, tau)
    21:    y ~ normal(theta, sigma);
   -------------------------------------------------

Probabilty functions with suffixes _lpdf, _lpmf, _lcdf, and _lccdf, require a vertical bar (|) between the first two arguments.

